# python-template

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlint  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/i18n/jp/: CONTRIBUTING.md
.github/workflows/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  build-and-test.yml  dependabot.yml
docs/i18n/jp/: CONTRIBUTING.md  README.md
src/: main.py  run.py
src/utils/: operator.py
tests/: test_operator.py
