[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "python template"
authors = ["example <example.example@example.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = ">=3.7 <=3.8"
python-dotenv = { extras = ["cli"], version = "^0.19.2" }

[tool.poetry.dev-dependencies]
pysen = { version = "^0.10.1", extras = ["lint"] }
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10.1"

# refference: https://dev.classmethod.jp/articles/shuntaka-python-tools/
[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 100
py_version = "py37"
[[tool.pysen.lint.mypy_targets]]
paths = ["."]
